add license file to package to stop linux complaining

--- a/build.xml
+++ b/build.xml
@@ -184,6 +184,7 @@
 			uri="javafx:com.sun.javafx.tools.ant"
 			classpath=".:${java.home}/../lib/ant-javafx.jar"/>    
 	<fx:resources id="appRes">
+		 <fx:fileset type="license" dir="." includes="license.txt"/>
 		 <fx:fileset dir="dist">
          		<include name="axoloti-app.jar"/>
 		 </fx:fileset>
