build:linux needs number only for pkg version

--- a/build.xml
+++ b/build.xml
@@ -303,9 +303,9 @@
 		     copyright="Axoloti.com" >
 		  		<fx:icon href="src/main/java/resources/icon_128x128.png"/>
 				<fx:splash href="src/main/java/resources/splash.png"/>
-		  		<fx:association icon="src/main/java/resources/icon_128x128.png" extension="axp axs axh axo"/>
+		  		<fx:association icon="src/main/java/resources/icon_128x128.png" mimetype="application/xml" extension="axp axs axh axo"/>
 	      	</fx:info>
-			<fx:application name="Axoloti" mainClass="axoloti.Axoloti" version="Linux-${short.version}"/>
+			<fx:application name="Axoloti" mainClass="axoloti.Axoloti" version="${short.version}"/>
 	    	<fx:resources refid="appRes"/>
     	</fx:deploy>
 
@@ -317,7 +317,7 @@
 		     copyright="Axoloti.com" >
 				<fx:icon href="src/main/java/resources/axoloti_icon.icns"/>
 				<fx:splash href="src/main/java/resources/splash.png"/>
-		  		<fx:association extension="axp axs axh axo"/>
+		  		<fx:association mimetype="application/xml" extension="axp axs axh axo"/>
 	      	</fx:info>
 			<fx:application name="Axoloti" mainClass="axoloti.Axoloti" version="Mac-${short.version}"/>
 	    	<fx:resources refid="appRes"/>
@@ -331,7 +331,7 @@
 		     copyright="Axoloti.com" >
 				<fx:icon href="src/main/java/resources/axoloti_icon.ico"/>
 				<fx:splash href="src/main/java/resources/splash.png"/>
-		  		<fx:association icon="src/main/java/resources/axoloti_icon.ico" extension="axp axs axh axo"/>
+		  		<fx:association icon="src/main/java/resources/axoloti_icon.ico" mimetype="application/xml" extension="axp axs axh axo"/>
 	      	</fx:info>
 			<fx:application name="Axoloti" mainClass="axoloti.Axoloti" version="Win-${short.version}"/>
 	    <fx:resources refid="appRes"/>
@@ -340,10 +340,14 @@
   </target>
 
     <target name="calc.short.version">
-        <exec executable="git" outputproperty="short.version" failifexecutionfails="false">
+        <exec executable="git" outputproperty="tag.short.version" failifexecutionfails="false">
             <arg line = "describe --tags --always" />
         </exec>
-		<echo> calculated short ${short.version}</echo>
+        <exec executable="sed" inputstring="${tag.short.version}" outputproperty="short.version" failifexecutionfails="false">
+            <arg line = "'s/[a-zA-Z].*//'" />
+	</exec>
+        <property name="short.version" value="${tag.short.version}"/>
+	<echo> calculated short ${short.version}</echo>
     </target>
 
     <target name="calc.build.version">
