--- a/build.xml
+++ b/build.xml
@@ -303,7 +303,9 @@
 		     copyright="Axoloti.com" >
 		  		<fx:icon href="src/main/java/resources/icon_128x128.png"/>
 				<fx:splash href="src/main/java/resources/splash.png"/>
+<!-- not supported on travis jdk8 ?
 		  		<fx:association icon="src/main/java/resources/icon_128x128.png" mimetype="application/xml" extension="axp axs axh axo"/>
+-->
 	      	</fx:info>
 			<fx:application name="Axoloti" mainClass="axoloti.Axoloti" version="${short.version}"/>
 	    	<fx:resources refid="appRes"/>
