build: travis seems to be causing issues even for associations on other os

--- a/build.xml
+++ b/build.xml
@@ -319,7 +319,9 @@
 		     copyright="Axoloti.com" >
 				<fx:icon href="src/main/java/resources/axoloti_icon.icns"/>
 				<fx:splash href="src/main/java/resources/splash.png"/>
+<!-- not supported on travis jdk8 ?
 		  		<fx:association mimetype="application/xml" extension="axp axs axh axo"/>
+-->
 	      	</fx:info>
 			<fx:application name="Axoloti" mainClass="axoloti.Axoloti" version="Mac-${short.version}"/>
 	    	<fx:resources refid="appRes"/>
@@ -333,7 +335,9 @@
 		     copyright="Axoloti.com" >
 				<fx:icon href="src/main/java/resources/axoloti_icon.ico"/>
 				<fx:splash href="src/main/java/resources/splash.png"/>
+<!-- not supported on travis jdk8 ?
 		  		<fx:association icon="src/main/java/resources/axoloti_icon.ico" mimetype="application/xml" extension="axp axs axh axo"/>
+-->
 	      	</fx:info>
 			<fx:application name="Axoloti" mainClass="axoloti.Axoloti" version="Win-${short.version}"/>
 	    <fx:resources refid="appRes"/>
