--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ os:
   - osx
 language: java
 before_install:
-- "if [ ${TRAVIS_OS_NAME:-'linux'} = 'linux' ]; then jdk_switcher use oraclejdk8 && sudo add-apt-repository ppa:webupd8team/java && sudo apt-get update -qq && install oracle-java8-installer && ./platform_linux/build.sh; fi"
+- "if [ ${TRAVIS_OS_NAME:-'linux'} = 'linux' ]; then jdk_switcher use oraclejdk8 && echo oracle-java8-installer shared/accepted-oracle-license-v1-1 select true | sudo /usr/bin/debconf-set-selections && sudo add-apt-repository ppa:webupd8team/java && sudo apt-get update -qq && sudo apt-get nstall oracle-java8-installer && ./platform_linux/build.sh; fi"
 - "if [ ${TRAVIS_OS_NAME:-'linux'} = 'osx' ]; then brew tap caskroom/cask && brew install brew-cask && brew cask install java && brew install ant && ./platform_osx/build.sh; fi"
 - "javac -version"
 script:
