build:put correct name on linux deb

--- a/build.xml
+++ b/build.xml
@@ -327,6 +327,10 @@
 	    	<fx:resources refid="appRes"/>
     	</fx:deploy>
 
+	<exec dir="." executable="mv" os="Linux">
+		<arg line="build/bundles/axoloti-${short.version}.deb build/bundles/axoloti-linux-${short.version}.deb "/>
+	</exec>
+
     	<fx:deploy os="Windows" nativeBundles="msi" width="100" height="100" outdir="build/" outfile="AxolotiApp" version="${build.version}">
             <fx:info title="Axoloti" 
 		     vendor="axoloti" 
