--- a/firmware/Makefile.patch
+++ b/firmware/Makefile.patch
@@ -17,10 +17,20 @@ axoloti_runtime ?= ..
 axoloti_release ?= ..
 axoloti_home ?= ..
 axoloti_firmware ?= ../firmware
+
+
 CHIBIOS = ${axoloti_release}/chibios
 CMSIS = ${axoloti_release}/CMSIS
-BDIR = ${axoloti_home}/build
 
+SPACE := 
+SPACE += 
+BDIR=$(subst $(SPACE),\ ,${axoloti_home}/build)
+# theoretically should be this...., but CSRC expansion cannot cope with escape spaces
+#FIRMWARE=$(subst $(SPACE),\ ,${axoloti_firmware})
+FIRMWARE=.
+
+$(info BDIR = ${BDIR})
+$(info FIRMWARE = ${FIRMWARE})
 
 include $(CHIBIOS)/boards/ST_STM32F4_DISCOVERY/board.mk
 include $(CHIBIOS)/os/hal/platforms/STM32F4xx/platform.mk
@@ -32,7 +42,7 @@ include $(CHIBIOS)/os/various/fatfs_bindings/fatfs.mk
 INCDIR = $(CMSIS)/Include \
 		 $(PORTINC) $(KERNINC) $(TESTINC) \
          $(HALINC) $(PLATFORMINC) $(BOARDINC) $(FATFSINC) \
-         ${axoloti_firmware} 
+         ${FIRMWARE} 
          
 # Paths
 IINCDIR   = $(patsubst %,-I%,$(INCDIR) $(DINCDIR) $(UINCDIR))
@@ -40,9 +50,9 @@ LLIBDIR   = $(patsubst %,-L%,$(DLIBDIR) $(ULIBDIR))
            
 all: ${BDIR}/xpatch.bin
 
-${BDIR}/xpatch.h.gch: ${axoloti_firmware}/xpatch.h ${axoloti_firmware}/patch.h ${axoloti_firmware}/axoloti.h ${axoloti_firmware}/parameter_functions.h
+${BDIR}/xpatch.h.gch: ${FIRMWARE}/xpatch.h ${FIRMWARE}/patch.h ${FIRMWARE}/axoloti.h ${FIRMWARE}/parameter_functions.h
 	@echo "Build precompiled header"
-	$(CPP) $(CCFLAGS11) $(IINCDIR) -Winvalid-pch -MD -MP -c ${axoloti_firmware}/xpatch.h  -o ${BDIR}/xpatch.h.gch
+	$(CPP) $(CCFLAGS11) $(IINCDIR) -Winvalid-pch -MD -MP -c ${FIRMWARE}/xpatch.h  -o ${BDIR}/xpatch.h.gch
 
 ${BDIR}/xpatch.bin: ${BDIR}/xpatch.cpp ${BDIR}/xpatch.h.gch
 	@echo "RM"
@@ -50,7 +60,7 @@ ${BDIR}/xpatch.bin: ${BDIR}/xpatch.cpp ${BDIR}/xpatch.h.gch
 	@echo "APP"
 	$(CPP) $(CCFLAGS11) -H $(IINCDIR) -Winvalid-pch -MD -MP --include ${BDIR}/xpatch.h -c ${BDIR}/xpatch.cpp -o ${BDIR}/xpatch.o 
 	@echo LINK
-	$(LD) $(LDFLAGS) ${BDIR}/xpatch.o -Wl,-Map=${BDIR}/xpatch.map,--cref,--just-symbols=${axoloti_firmware}/build/axoloti.elf -o ${BDIR}/xpatch.elf
+	$(LD) $(LDFLAGS) ${BDIR}/xpatch.o -Wl,-Map=${BDIR}/xpatch.map,--cref,--just-symbols=${FIRMWARE}/build/axoloti.elf -o ${BDIR}/xpatch.elf
 	@echo BIN
 #	$(CP) -O binary -j .text  -j .init_array -j .rodata -j .rodata\* xpatch.elf xpatch.bin
 #   -j .text.startup -j .text.memcpy  
