--- a/build.xml
+++ b/build.xml
@@ -330,9 +330,13 @@
 		  		<fx:association mimetype="application/xml" extension="axp axs axh axo"/>
 -->
 	      	</fx:info>
-			<fx:application name="Axoloti" mainClass="axoloti.Axoloti" version="Mac-${short.version}"/>
+			<fx:application name="Axoloti" mainClass="axoloti.Axoloti" version="${short.version}"/>
 	    	<fx:resources refid="appRes"/>
     	</fx:deploy>
+
+	<exec dir="." executable="mv" os="Mac OS X">
+		<arg line="build/bundles/Axoloti-${short.version}.dmg build/bundles/axoloti-mac-${short.version}.dmg"/>
+	</exec>
 
 	<exec dir="." executable="mv" os="Linux">
 		<arg line="build/bundles/axoloti-${short.version}.deb build/bundles/axoloti-linux-${short.version}.deb"/>
@@ -365,7 +369,7 @@
             <arg line = "describe --tags --always" />
         </exec>
         <exec executable="sed" inputstring="${tag.short.version}" outputproperty="short.version" failifexecutionfails="false">
-            <arg line = "'s/[a-zA-Z].*//'" />
+            <arg line = "'s/[a-zA-Z\-].*//'" />
 	</exec>
         <property name="short.version" value="${tag.short.version}"/>
 	<echo> calculated short ${short.version}</echo>
