--- a/build.xml
+++ b/build.xml
@@ -247,7 +247,7 @@
 		 </fx:fileset>
 		 <fx:fileset dir="lib">
 			 <include name="simple-xml-2.7.1.jar"/>
-                         <include name="lib/rsyntaxtextarea-2.5.8.jar"/>
+                         <include name="rsyntaxtextarea-2.5.8.jar"/>
 			 <include name="usb4java-1.2.0/lib/usb4java-1.2.0.jar"/>
 			 <include name="usb4java-1.2.0/lib/libusb4java-1.2.0-linux-arm.jar"/>
 			 <include name="usb4java-1.2.0/lib/libusb4java-1.2.0-linux-x86.jar"/>
