--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,9 @@
 [submodule "axoloti-factory"]
 	path = axoloti-factory
 	url = https://github.com/axoloti/axoloti-factory.git
+    branch = master
 [submodule "axoloti-contrib"]
 	path = axoloti-contrib
 	url = https://github.com/axoloti/axoloti-contrib.git
+    branch = master
+
