GUI:add build time to about box

--- a/build.xml
+++ b/build.xml
@@ -393,12 +393,16 @@
     </target>
 
     <target name="create.build.version" depends = "calc.build.version, calc.short.version">
-        <property name="build.version" value="(git missing)"/>
+		<tstamp>
+		    <format property="build.time" pattern="dd/MM/yyyy hh:mm ss z"/>
+		</tstamp>
+		<property name="build.version" value="(git missing)"/>
         <property name="short.version" value="(git missing)"/>
         <echo output="src/main/java/axoloti/Version.java" >package axoloti;${line.separator}</echo>
         <echo output="src/main/java/axoloti/Version.java" append="true">public class Version {${line.separator}</echo>
         <echo output="src/main/java/axoloti/Version.java" append="true">public final static String AXOLOTI_VERSION = "${build.version}";${line.separator}</echo>
         <echo output="src/main/java/axoloti/Version.java" append="true">public final static String AXOLOTI_SHORT_VERSION = "${short.version}";${line.separator}</echo>
+        <echo output="src/main/java/axoloti/Version.java" append="true">public final static String AXOLOTI_BUILD_TIME = "${build.time}";${line.separator}</echo>
         <echo output="src/main/java/axoloti/Version.java" append="true">};${line.separator}</echo>
     </target>
       
