--- a/firmware/Makefile.patch
+++ b/firmware/Makefile.patch
@@ -41,8 +41,8 @@ include $(CHIBIOS)/os/various/fatfs_bindings/fatfs.mk
 INCDIR = $(CMSIS)/Include \
 		 $(PORTINC) $(KERNINC) $(TESTINC) \
          $(HALINC) $(PLATFORMINC) $(BOARDINC) $(FATFSINC) \
-         ${FIRMWARE} $(CHIBIOS)
-         
+         ${FIRMWARE} $(CHIBIOS) ${FIRMWARE}/mutable_instruments
+
 # Paths
 IINCDIR   = $(patsubst %,-I%,$(INCDIR) $(DINCDIR) $(UINCDIR))
 LLIBDIR   = $(patsubst %,-L%,$(DLIBDIR) $(ULIBDIR))
